--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -15,3 +15,6 @@ sideBar-publicity:
     url: https://bit.ly/2Rx4Wkw
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
+  - image:
+https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
+    url: https://www.esetlive.com/securitydays-venezuela
