--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -11,8 +11,8 @@ sideBar-publicity:
     url: http://www.itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANNER_CANALES-FAVORITOS_300x300A.gif
-    url: https://bit.ly/2Rx4Wkw
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
+    url: https://www.banesco.com/somos-banesco/responsabilidad-social/programa-de-formacion-de-microempresarios
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
