--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -12,7 +12,7 @@ sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
-    url: https://www.banesco.com/somos-banesco/responsabilidad-social/programa-de-formacion-de-microempresarios
+    url: https://bit.ly/35pTmuW
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
