--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -3,16 +3,16 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 header-url: https://www.absidecorp.com/
 
 publicity-1:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banesco-Biblioteca-Digital-300x300.gif
-    url: https://www.banesco.com/somos-banesco/biblioteca-digital-banesco/biblioteca-digital-banesco-2
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
+    url: https://bit.ly/35pTmuW
    
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBS para VENEZUELA.png
     url: http://www.itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
-    url: https://bit.ly/35pTmuW
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANNER_CANALES-FAVORITOS_300x300A.gif
+    url: https://bit.ly/3xqpafs
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
