--- a/_data/mexico/publicity.yml
+++ b/_data/mexico/publicity.yml
@@ -1,4 +1,4 @@
-header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/ban-TNEWSLAT-abside2020-728X90px-new.gif'
+header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/Disponible-publicidad.jpg'
 
 header-url: https://www.absidecorp.com/
 
@@ -11,4 +11,3 @@ sideBar-publicity:
     url: http://www.itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
-
