--- a/_data/panama/publicity.yml
+++ b/_data/panama/publicity.yml
@@ -1,4 +1,4 @@
-header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/ban-TNEWSLAT-abside2020-728X90px.gif'
+header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/Disponible-publicidad.jpg'
 
 header-url: https://www.absidecorp.com/ 
 
