--- a/_data/panama/publicity.yml
+++ b/_data/panama/publicity.yml
@@ -1,6 +1,6 @@
 header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/Disponible-publicidad.jpg'
 
-header-url: https://www.absidecorp.com/ 
+header-url: https://itnews.lat/ 
 
 publicity-1:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Calendario.jpg
