pages errors and Duartech logos

--- a/_data/argentina/publicity.yml
+++ b/_data/argentina/publicity.yml
@@ -10,5 +10,7 @@ sideBar-publicity:
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Botom-IG.jpg
     url: https://itnews.lat/nuestros-live-en-instagram.html
+  - image: https://duartech-page.s3.us-east-2.amazonaws.com/duartechPublicity.gif
+    url: https://www.duartechsolutions.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/partner-it.jpg
     url: http://itnews.lat/Socios.html
