--- a/_data/index.yml
+++ b/_data/index.yml
@@ -32,6 +32,8 @@ moreNews:
         href: "https://synergy.vision/"
       - title: Synergy-GB
         href: "http://www.synergy-gb.com/newsgb/index.php"
+      - title: Duartech Solutions
+        href: "https://duartechsolutions.com"
     moreNews: /prwire.html
     moreNews-title: Más noticias sobre tecnología
 
