--- a/_data/mexico/publicity.yml
+++ b/_data/mexico/publicity.yml
@@ -10,3 +10,5 @@ sideBar-publicity:
     url: http://www.itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
+  - image: https://duartech-page.s3.us-east-2.amazonaws.com/duartechPublicity.gif
+    url: https://www.duartechsolutions.com/
