--- a/_data/colombia/publicity.yml
+++ b/_data/colombia/publicity.yml
@@ -9,6 +9,8 @@ publicity-1:
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Calendario.jpg
     url: https://itnews.lat/calendario.html
+  - image: https://duartech-page.s3.us-east-2.amazonaws.com/duartechPublicity.gif
+    url: https://www.duartechsolutions.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/partner-it.jpg
