--- a/_data/peru/publicity.yml
+++ b/_data/peru/publicity.yml
@@ -8,6 +8,8 @@ publicity-1:
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Botom-IG.jpg
     url: https://itnews.lat/nuestros-live-en-instagram.html
+  - image: https://duartech-page.s3.us-east-2.amazonaws.com/duartechPublicity.gif
+    url: https://www.duartechsolutions.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/partner-it.jpg
