--- a/_data/mexico/publicity.yml
+++ b/_data/mexico/publicity.yml
@@ -8,3 +8,5 @@ publicity-1:
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
+    url: https://itnews.lat/businesswire.html
