--- a/_data/panama/publicity.yml
+++ b/_data/panama/publicity.yml
@@ -11,5 +11,5 @@ sideBar-publicity:
     url: https://itnews.lat/nuestros-live-en-instagram.html
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/partner-it.jpg
-    url: http://itnews.lat/Socios.html
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
+    url: https://itnews.lat/businesswire.html
