--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -11,3 +11,5 @@ sideBar-publicity:
     url: http://www.logintel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
+   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
+    url: https://itnews.lat/businesswire.html
