--- a/_data/chile/publicity.yml
+++ b/_data/chile/publicity.yml
@@ -7,7 +7,9 @@ publicity-1:
     url: https://itnews.lat/businesswire.html
 
 sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Botom-IG.jpg
-    url: https://itnews.lat/nuestros-live-en-instagram.html
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
