--- a/_data/mexico/publicity.yml
+++ b/_data/mexico/publicity.yml
@@ -2,11 +2,13 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 
 header-url: https://itnews.lat/
 publicity-1:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
-    url: https://bit.ly/35pTmuW
-
-sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
-    url: http://www.logintel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
     url: https://itnews.lat/businesswire.html
+
+sideBar-publicity:
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/
