--- a/_data/mexico/publicity.yml
+++ b/_data/mexico/publicity.yml
@@ -6,6 +6,8 @@ publicity-1:
     url: https://itnews.lat/businesswire.html
 
 sideBar-publicity:
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
+    url: https://itnews.lat/businesswire.html
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
