--- a/_data/header.yml
+++ b/_data/header.yml
@@ -34,8 +34,8 @@ publicity-1:
     url: http://www.logintel.com.ve/
 
 sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banesco-Presupuesto-P.-Banner-300x300.gif
-    url: https://www.banesco.com/somos-banesco/responsabilidad-social/presupuesto-participativo 
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
+    url: http://www.ciberespacio.com.ve/ 
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
