--- a/_data/panama/publicity.yml
+++ b/_data/panama/publicity.yml
@@ -7,8 +7,8 @@ publicity-1:
     url: https://itnews.lat/businesswire.html
 
 sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
-    url: http://www.ciberespacio.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBS para COLOMBIA.png
+    url: https://itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
