--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -3,8 +3,8 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 header-url: https://www.absidecorp.com/
 
 publicity-1:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BANESCO PIZZERO.gif
-    url: https://bit.ly/35pTmuW
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/CIBERESPACIO-300x300-22-1-Banesco.gif
+    url: https://bit.ly/3DsrMOa
    
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
