--- a/_data/index.yml
+++ b/_data/index.yml
@@ -28,6 +28,8 @@ moreNews:
         href: /about.html
       - title: Socios
         href: /Socios.html
+	  - title: Publicidad
+        href: /Publicidad.html
       - title: Synergy Vision
         href: "https://synergy.vision/"
       - title: Synergy-GB
