--- a/_data/index.yml
+++ b/_data/index.yml
@@ -29,7 +29,7 @@ moreNews:
       - title: Socios
         href: /Socios.html
 	  - title: Publicidad
-        href: /Publicidad.html
+        href: "https://bit.ly/3rPtTXs"
       - title: Synergy Vision
         href: "https://synergy.vision/"
       - title: Synergy-GB
