--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -3,8 +3,8 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 header-url: https://www.absidecorp.com/
 
 publicity-1:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Ciberespacio 300x300 18A.gif
-    url: https://bit.ly/3DZwnYm
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banesco-Copia-300x300.gif
+    url: https://bit.ly/3Mytr84
    
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
