--- a/_data/colombia/publicity.yml
+++ b/_data/colombia/publicity.yml
@@ -7,7 +7,7 @@ publicity-1:
     url: https://itnews.lat/businesswire.html
 
 sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBS para COLOMBIA.png
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
     url: https://itbscorp.com/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/banner300x300.jpg
     url: http://www.ciberespacio.com.ve/
