--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -3,13 +3,13 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 header-url: https://www.absidecorp.com/
 
 publicity-1:
-https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
-    url: https://itbscorp.com/
-   
-sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
     url: http://www.logintel.com.ve/
+   
+sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
     url: https://itnews.lat/businesswire.html
+  - image:https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
+    url: https://itbscorp.com/
