--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -2,9 +2,8 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 
 header-url: https://www.absidecorp.com/
 
-publicity-1:
-https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
-    url: https://itbscorp.com/
+publicity-1: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
+url: https://itbscorp.com/
    
 sideBar-publicity:
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
