--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -2,17 +2,16 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 
 header-url: https://www.absidecorp.com/
 
-publicity-1: 
-https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/CIBERESPACIO-300x300-JUNIO.gif
-url: http://blog.banesco.com/acciones-sencillas-aportan-la-sostenibilidad/
+publicity-1: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
+url: https://itbscorp.com/
    
 # sideBar-publicity:
 #   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
 #     url: http://www.logintel.com.ve/
    
 sideBar-publicity:
-  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
-    url: http://www.logintel.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/CIBERESPACIO-300x300-JUNIO.gif
+    url: http://blog.banesco.com/acciones-sencillas-aportan-la-sostenibilidad/ 
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
