--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -2,11 +2,12 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 
 header-url: https://www.absidecorp.com/
 
-publicity-1: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
-url: https://itbscorp.com/
+publicity-1: 
+image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
+url: http://www.logintel.com.ve/
    
 # sideBar-publicity:
-#   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
+#   - image:
 #     url: http://www.logintel.com.ve/
    
 sideBar-publicity:
