--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -15,6 +15,8 @@ sideBar-publicity:
     url: http://blog.banesco.com/acciones-sencillas-aportan-la-sostenibilidad/ 
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_4GEllaCambio_ciberespacio.jpg
     url: https://www.digitel.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/Banner_Logintel.png
+    url: http://www.logintel.com.ve/
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/BW.jpg
     url: https://itnews.lat/businesswire.html
   - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/ITBSparaITNEWSLAT_300x300.jpg
