--- a/_data/venezuela/publicity.yml
+++ b/_data/venezuela/publicity.yml
@@ -3,8 +3,8 @@ header-publicity: 'https://raw.githubusercontent.com/itnewslat/assets/master/img
 header-url: https://www.absidecorp.com/
 
 publicity-1: 
-image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
-url: http://www.logintel.com.ve/
+  - image: https://raw.githubusercontent.com/itnewslat/assets/master/img/300x300/2021-ESD-IT-News-venezuela-300x300.gif
+	url: http://www.logintel.com.ve/
    
 # sideBar-publicity:
 #   - image:
